--- a/style/index.css
+++ b/style/index.css
@@ -20,18 +20,15 @@ body {
 }
 
 .skills-development {
-    background-color: #ffecd2;
-    background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+    background-color: #c5c2c2;
 }
 
 .networking {
-    background-color: #84fab0;
-    background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 100%);
+    background-color: #fbf5f5;
 }
 
 .interview-practice {
-    background-color: #a6c0fe;
-    background-image: linear-gradient(to right, #a6c0fe 0%, #f68084 100%);
+    background-color: #c5c2c2;
 }
 
 .dashboard-container {
@@ -58,19 +55,16 @@ body {
 }
 
 .welcome-section {
-    background-color: #ff9a9e;
-    background-image: linear-gradient(to right, #ff9a9e 0%, #fad0c4 100%);
+    background-color: #fbf5f5;
 }
 
 .how-to-play {
-    background-color: #a1c4fd;
-    background-image: linear-gradient(to right, #a1c4fd 0%, #c2e9fb 100%);
-}
+    background-color: #c5c2c2;
+    }
 
 .benefits-of-playing {
-    background-color: #d4fc79;
-    background-image: linear-gradient(to right, #d4fc79 0%, #96e6a1 100%);
-}
+    background-color: #fbf5f5;
+    }
 
 h1, h2 {
     color: #2c3e50;
@@ -82,7 +76,7 @@ p, ul {
 }
 
 button {
-    background-color: #3498db;
+    background-color: #0c0d0d;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -94,7 +88,7 @@ button {
 }
 
 button:hover {
-    background-color: #2980b9;
+    background-color: #505152;
 }
 
 
