--- a/style/profile.css
+++ b/style/profile.css
@@ -3,7 +3,7 @@
     max-width: 1200px; /* Ensures it's the same width as the homepage */
     margin: 40px auto; /* Aligns it centrally with top and bottom space */
     padding: 20px; /* Padding inside the container to match the homepage */
-    background-color: #5bdade;
+    background-color: #cdd1d1;
     border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1); /* Same shadow effect as the homepage cards */
 }
@@ -33,12 +33,12 @@
 
 .profile-data p {
     font-size: 18px;
-    color: #555;
+    color: #000;
     margin: 8px 0;
 }
 
 .profile-data p strong {
-    color: #333;
+    color: #000;
 }
 
 .profile-actions {
@@ -49,7 +49,7 @@
 
 .profile-actions button {
     padding: 10px 20px;
-    background-color: #007BFF;
+    background-color: #000;
     color: white;
     border: none;
     border-radius: 5px;
@@ -57,7 +57,7 @@
 }
 
 .profile-actions button:hover {
-    background-color: #0056b3;
+    background-color: #5b5d5f;
 }
 
 /* Edit Profile Form */
@@ -96,7 +96,7 @@
 
 .profile-edit-section form select:focus,
 .profile-edit-section form input:focus {
-    border-color: #007BFF;
+    border-color: #4994e3;
     outline: none;
     box-shadow: 0 2px 5px rgba(0, 123, 255, 0.3);
 }
@@ -110,7 +110,7 @@
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
-    border-radius: 8px;
+    border-radius: 4px;
     font-size: 16px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
@@ -124,13 +124,13 @@
 }
 
 .skill-tag {
-    background-color: #007BFF;
+    background-color: #5d5c5c;
     color: white;
-    padding: 8px 12px;
-    border-radius: 20px;
+    padding: 8px 8px;
+    border-radius: 10px;
     display: flex;
     align-items: center;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .skill-tag button {
@@ -148,7 +148,7 @@
 
 /* Submit Button */
 #profile-form button {
-    background-color: #28a745;
+    background-color: #000;
     color: white;
     padding: 12px 20px;
     border: none;
