--- a/style/question.css
+++ b/style/question.css
@@ -44,6 +44,15 @@
   color: #fff;
 }
 
+.no-hover {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.no-hover:hover {
+  cursor: default;
+}
+
 .feedback {
   margin-top: 20px;
   font-weight: bold;
@@ -58,7 +67,7 @@
   color: red;
 }
 
-.next-question {
+.next-question, .try-again {
   display: none;
   margin-top: 30px;
   padding: 12px 20px;
